fixing css urls

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -9,7 +9,7 @@ body {
     width:480px;
     height: 640px;
     margin:0px auto;
-    background: rgb(112, 197, 206) url(/imgs/background.png) no-repeat left bottom;
+    background: rgb(112, 197, 206) url(../imgs/background.png) no-repeat left bottom;
 }
 
 .board {
@@ -24,12 +24,12 @@ body {
   height: 10px;
   width: 480px;
   top: 567px;
-  background: transparent url(/imgs/scrolling-border.png) repeat-x top left;
+  background: transparent url(../imgs/scrolling-border.png) repeat-x top left;
 }
 
 .flappy {
     position: absolute;
-    background: transparent url(/imgs/flappy-base.png) no-repeat top left;
+    background: transparent url(../imgs/flappy-base.png) no-repeat top left;
     top: 312px;
     left: 212px;
     width: 57px;
@@ -45,7 +45,7 @@ body {
 .pillar-upper {
   top: 0px;
   right: 150px;
-  background-image: url(/imgs/upper-pillar-head.png), url(/imgs/pillar-bkg.png);
+  background-image: url(../imgs/upper-pillar-head.png), url(../imgs/pillar-bkg.png);
   background-position: left bottom, left bottom;
   background-repeat: no-repeat, repeat-y;
 }
@@ -53,7 +53,7 @@ body {
 .pillar-lower {
   bottom: 80px;
   right: 150px;
-  background-image: url(/imgs/lower-pillar-head.png), url(/imgs/pillar-bkg.png);
+  background-image: url(../imgs/lower-pillar-head.png), url(../imgs/pillar-bkg.png);
   background-position: left top, left top;
   background-repeat: no-repeat, repeat-y;
 }
